--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-bull-graphql",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "nestjs-bull-graphql",
   "author": {
     "name": "Andrey Prisniiak",
@@ -61,7 +61,7 @@
     "ioredis": "4.27.7",
     "mongoose": "5.13.5",
     "mongoose-paginate-v2": "1.4.1",
-    "mongoose-unique-validator": "2.0.3",
+    "mongoose-unique-validator": "^2.0.3",
     "nestjs-redis": "1.3.3",
     "nestjs-session": "1.0.1",
     "node-fetch": "2.6.1",
